Add failing unit test showing that SqlServer database reverse engineering is inconsistent with script generator for unique indexes on nullable columns
    CREATE TABLE [dbo].[Place] (
        [Id] int NOT NULL IDENTITY,
        [Name] int,
        CONSTRAINT [PK_Place] PRIMARY KEY ([Id])
    );
    CREATE UNIQUE INDEX [IX_Place_Name] ON [dbo].[Place] ([Name]) WHERE [Name] IS NOT NULL;

becomes

    CREATE TABLE [dbo].[Place] (
        [Id] int NOT NULL IDENTITY,
        [Name] int NOT NULL, <<< FAIL!
        CONSTRAINT [PK_Place] PRIMARY KEY ([Id]),
        CONSTRAINT [IX_Place_Name] UNIQUE ([Name]) <<< FAIL!
    );
    CREATE UNIQUE INDEX [IX_Place_Name] ON [dbo].[Place] ([Name]) WHERE [Name] IS NOT NULL;

--- a/test/Microsoft.EntityFrameworkCore.SqlServer.Design.FunctionalTests/Microsoft.EntityFrameworkCore.SqlServer.Design.FunctionalTests.csproj
+++ b/test/Microsoft.EntityFrameworkCore.SqlServer.Design.FunctionalTests/Microsoft.EntityFrameworkCore.SqlServer.Design.FunctionalTests.csproj
@@ -40,6 +40,7 @@
     <Compile Include="Properties\TestAssemblyConditions.cs" />
     <Compile Include="ReverseEngineering\SqlServerE2EFixture.cs" />
     <Compile Include="ReverseEngineering\SqlServerE2ETests.cs" />
+    <Compile Include="SqlServerScaffoldingModelFactoryTest.cs" />
     <Compile Include="SqlServerDatabaseModelFactoryTest.cs" />
     <Compile Include="SqlServerDatabaseModelFixture.cs" />
   </ItemGroup>
